welcome.lessons.welcome.array.array667.Array667.scala.error
array667:7: error: type mismatch;
 found   : Boolean(true)
 required: Int
      return true
             ^array667:10: error: type mismatch;
 found   : Boolean(false)
 required: Int
  return false
         ^